--- a/a/index.html
+++ b/a/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en-US">
 	<head>
 
 		<!--Developed by Caleb Stewart: calebs2500@gmail.com-->
@@ -110,7 +110,12 @@
 		<div id="content">
 			<div id="contentFrame">
 				<center>
-					<p><b>Applications</b><br>Applications are open from September 1<sup>st</sup> - September 6<sup>th</sup><br><br>Follow<a href="http://twitter.com/vulturesmp"> @VultureSMP</a> on Twitter for updates and information!</p>
+					<br>
+					<iframe width="600" height="335" src="https://www.youtube.com/embed/yAfiRmAey0g" frameborder="0" allowfullscreen></iframe>
+					<br><br>
+					<iframe src="https://docs.google.com/forms/d/1gYepcImwlscHTuuf2-eTRWPoNxZzMXfSaZ9guL6LYcw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+					<!-- <p><b>Applications</b><br>Applications are open from September 1<sup>st</sup> - September 6<sup>th</sup><br><br>Follow<a href="http://twitter.com/vulturesmp"> @VultureSMP</a> on Twitter for updates and information!</p> -->
 				</center>
 			</div>
 		</div>
@@ -118,7 +123,7 @@
 		<br>
 		<br>
 
-		<div id="footer" style="position: absolute;">
+		<div id="footer">
 			<center>
 				<p>&copy VultureSMP, 2015 | Website design, code and media property of <a id="footerLink" href="mailto:contact@vulturesmp.com">VultureSMP</a> | Designed by <a id="footerLink" href="mailto:calebs2500@gmail.com">Caleb Stewart</a></p>
 			</center>
