--- a/a/index.html
+++ b/a/index.html
@@ -110,7 +110,8 @@
 		<div id="content">
 			<div id="contentFrame">
 				<center>
-					<br>
+						Applications are open from 9<sup>th</sup> to the 25<sup>th</sup> of August!
+					<br><br>
 					<iframe width="600" height="335" src="https://www.youtube.com/embed/yAfiRmAey0g" frameborder="0" allowfullscreen></iframe>
 					<br><br>
 					<iframe src="https://docs.google.com/forms/d/1gYepcImwlscHTuuf2-eTRWPoNxZzMXfSaZ9guL6LYcw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
