--- a/index.html
+++ b/index.html
@@ -2,93 +2,29 @@
 
 <html>
 	<head>
-	
+
 		<!--Developed by Caleb Stewart: calebs2500@gmail.com-->
 		<meta name="author" content="Caleb Stewart">
-		
+
 		<meta name="description" content="Everything to know about VultureSMP">
 		<meta name="keywords" content="VultureSMP, Home, Vulture, Server, Ben_Andy">
-		
+
 		<title>VultureSMP | Home</title>
 		<link rel="icon" type="image/png" href="http://vulturesmp.com/head/favicon.png">
-		
+
 		<link href="files/home/style.css" rel="stylesheet" type="text/css"> <!--Styles-->
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'> <!--Font: Source Sans Pro-->
-		
+
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!--Import jQuery-->
+		<script src="js/header.js"></script>
 	</head>
-	
+
 	<body>
-		<script>	<!--Dynamic Header-->
-		$(window).scroll(function() {
-			if ($(this).scrollTop() > 1){  
-				$('div#header').addClass("isScrolled");
-			}
-			else{
-				$('div#header').removeClass("isScrolled");
-			}
-		});
-		</script>
-		
-		<script>	<!--Dynamic Header-->
-		$(window).scroll(function() {
-			if ($(this).scrollTop() > 1){  
-				$('p#pageHeading').addClass("isScrolled");
-			}
-			else{
-				$('p#pageHeading').removeClass("isScrolled");
-			}
-		});
-		</script>
-		
-		<script>	<!--Dynamic Header-->
-		$(window).scroll(function() {
-			if ($(this).scrollTop() > 1){  
-				$('div#navButtons').addClass("isScrolled");
-			}
-			else{
-				$('div#navButtons').removeClass("isScrolled");
-			}
-		});
-		</script>
-		
-		<script>	<!--Dynamic Header-->
-		$(window).scroll(function() {
-			if ($(this).scrollTop() > 1){  
-				$('img#twitterSocial').addClass("isScrolled");
-			}
-			else{
-				$('img#twitterSocial').removeClass("isScrolled");
-			}
-		});
-		</script>
-		
-		<script>	<!--Dynamic Header-->
-		$(window).scroll(function() {
-			if ($(this).scrollTop() > 1){  
-				$('img#twitterBotSocial').addClass("isScrolled");
-			}
-			else{
-				$('img#twitterBotSocial').removeClass("isScrolled");
-			}
-		});
-		</script>
-		
-		<script>	<!--Dynamic Header-->
-		$(window).scroll(function() {
-			if ($(this).scrollTop() > 1){  
-				$('img#headerLogo').addClass("isScrolled");
-			}
-			else{
-				$('img#headerLogo').removeClass("isScrolled");
-			}
-		});
-		</script>
-		
+
 		<div id="header">
-		
+
 			<p id="pageHeading">VultureSMP</p>
-			
+
 			<center>
 				<div id="navButtons">
 					<a id="navButtonSelected" href="index.html">Home</a>
@@ -97,20 +33,20 @@
 					<a href="connect.html">Connect</a>
 					<a href="download.html">Downloads</a>
                     <a href="hosting.html">Hosting</a>
-					
+
 				</div>
 			</center>
-			
+
 			<div id="socialButtons">
 				<a href="http://www.twitter.com/VultureSMP">
 					<img src="http://vulturesmp.com/head/twitter.png" id="twitterSocial" title="VultureSMP">
 				</a>
 			</div>
-			
+
 			<img id="headerLogo" src="http://vulturesmp.com/head/logo.png">
-			
+
 		</div>
-		
+
 		<div id="content">
 			<div id="contentFrame">
 				<center>
@@ -124,10 +60,10 @@
 				</center>
 			</div>
 		</div>
-		
+
 		<br>
 		<br>
-		
+
 		<div id="footer">
 			<center>
 				<p>&copy VultureSMP, 2015 | Website design, code and media property of <a id="footerLink" href="mailto:contact@vulturesmp.com">VultureSMP</a> | Designed by <a id="footerLink" href="mailto:calebs2500@gmail.com">Caleb Stewart</a></p>
