update for dev v2

--- a/v2/index.html
+++ b/v2/index.html
@@ -14,6 +14,7 @@
 			
 		<link type="text/css" rel="stylesheet" href="css/header.css">
 		<link type="text/css" rel="stylesheet" href="css/body.css">
+		<link type="text/css" rel="stylesheet" href="css/footer.css">
 		<link type="text/css" rel="stylesheet" href="css/home.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -52,6 +53,9 @@
 					<iframe src="https://www.youtube.com/embed/videoseries?list=PLW7QbvSueDNLNWMOxHOVMzASqCcziULVh" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
+			
+			<footer id="pageFooter">
+			</footer>
 		</div>
 	</body>
 </html>
