--- a/v2/members.html
+++ b/v2/members.html
@@ -14,6 +14,7 @@
 			
 		<link type="text/css" rel="stylesheet" href="css/header.css">
 		<link type="text/css" rel="stylesheet" href="css/body.css">
+		<link type="text/css" rel="stylesheet" href="css/footer.css">
 		<link type="text/css" rel="stylesheet" href="css/members.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -153,7 +154,15 @@
 						<div class="boxaSocial playerSocial"></div>
 					</div>	
 				</div>
+				<span class="center">
+					<p>Here's what we're saying on <a class="bodyLink" href="https://twitter.com/VultureSMP/lists/vulturesmpers">Twitter</a>!</p>
+					<a class="twitter-timeline" href="https://twitter.com/VultureSMP/lists/vulturesmpers" data-widget-id="576367046306308096" height="400px" width="500px" data-chrome="noborders">Tweets from the Vultures</a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+				</span>
 			</div>
+			
+			<footer id="pageFooter">
+			</footer>
 		</div>
 	</body>
 </html>
