--- a/v2/blank.html
+++ b/v2/blank.html
@@ -14,6 +14,7 @@
 			
 		<link type="text/css" rel="stylesheet" href="css/header.css">
 		<link type="text/css" rel="stylesheet" href="css/body.css">
+		<link type="text/css" rel="stylesheet" href="css/adspace.css">
 		<link type="text/css" rel="stylesheet" href="css/footer.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
