--- a/v2/connect.html
+++ b/v2/connect.html
@@ -14,11 +14,15 @@
 			
 		<link type="text/css" rel="stylesheet" href="css/header.css">
 		<link type="text/css" rel="stylesheet" href="css/body.css">
+		<link type="text/css" rel="stylesheet" href="css/adspace.css">
+		<link type="text/css" rel="stylesheet" href="css/ads.css">
 		<link type="text/css" rel="stylesheet" href="css/footer.css">
 		<link type="text/css" rel="stylesheet" href="css/connect.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/primary.js"></script>
+		<script src="js/adspace.js"></script>
+		<script src="js/ads.js" defer></script>
 		<script>
 		var pageID = "connect";
 		
@@ -62,6 +66,18 @@
 					<p>If you have a more formal enquiry, please don't hesitate to contact us via <a href="mailto:contact@vulturesmp.com?subject=Enquiry%20from%20website" class="bodyLink">email</a>. (contact@vulturesmp.com)</p>
 			</div>
 			
+			<div id="adSpace">
+				<div id="adSpaceDisplay" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
+					<div id="arrowTop" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+					<div id="arrowBottom" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+				</div>
+				
+				<div id="adContent">
+				</div>
+				<div id="adLinkWrapper">
+					<a id="adLink" href="#">> More</a>
+				</div>
+			</div>
 			<footer id="pageFooter">
 			</footer>
 		</div>
