--- a/v2/hosting.html
+++ b/v2/hosting.html
@@ -14,10 +14,14 @@
 			
 		<link type="text/css" rel="stylesheet" href="css/header.css">
 		<link type="text/css" rel="stylesheet" href="css/body.css">
+		<link type="text/css" rel="stylesheet" href="css/adspace.css">
+		<link type="text/css" rel="stylesheet" href="css/ads.css">
 		<link type="text/css" rel="stylesheet" href="css/footer.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/primary.js"></script>
+		<script src="js/adspace.js"></script>
+		<script src="js/ads.js" defer></script>
 		<script>
 		var pageID = "hosting";
 		
@@ -43,6 +47,18 @@
 				<span class="center"><p>When purchasing a server from <a href="http://provisionhost.com" class="bodyLink">ProvisionHost.com</a>, use code "Harp3rBoy" for 5% off!</p></span>
 			</div>
 			
+			<div id="adSpace">
+				<div id="adSpaceDisplay" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
+					<div id="arrowTop" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+					<div id="arrowBottom" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+				</div>
+				
+				<div id="adContent">
+				</div>
+				<div id="adLinkWrapper">
+					<a id="adLink" href="#">> More</a>
+				</div>
+			</div>
 			<footer id="pageFooter">
 			</footer>
 		</div>
