take 2 - this is istingy

--- a/v2-1/hosting.html
+++ b/v2-1/hosting.html
@@ -47,16 +47,16 @@
 				<span class="center"><p>When purchasing a server from <a href="http://provisionhost.com" class="bodyLink">ProvisionHost.com</a>, use code "Harp3rBoy" for 5% off!</p></span>
 			</div>
 			
-			<div id="adSpace">
-				<div id="adSpaceDisplay" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
-					<div id="arrowTop" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
-					<div id="arrowBottom" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+			<div id="bannerSpace">
+				<div id="bannerSpaceDisplay" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
+					<div id="arrowTop" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+					<div id="arrowBottom" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
 				</div>
 				
-				<div id="adContent">
+				<div id="bannerContent">
 				</div>
-				<div id="adLinkWrapper">
-					<a id="adLink" href="#">> More</a>
+				<div id="bannerLinkWrapper">
+					<a id="bannerLink" href="#">> More</a>
 				</div>
 			</div>
 			<footer id="pageFooter">
