--- a/v2-1/index.html
+++ b/v2-1/index.html
@@ -58,16 +58,16 @@
 				</div>
 			</div>
 			
-			<div id="adSpace">
-				<div id="adSpaceDisplay" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
-					<div id="arrowTop" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
-					<div id="arrowBottom" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+			<div id="bannerSpace">
+				<div id="bannerSpaceDisplay" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
+					<div id="arrowTop" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+					<div id="arrowBottom" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
 				</div>
 				
-				<div id="adContent">
+				<div id="bannerContent">
 				</div>
-				<div id="adLinkWrapper">
-					<a id="adLink" href="#">> More</a>
+				<div id="bannerLinkWrapper">
+					<a id="bannerLink" href="#">> More</a>
 				</div>
 			</div>
 			<footer id="pageFooter">
