--- a/v2-1/connect.html
+++ b/v2-1/connect.html
@@ -66,16 +66,16 @@
 					<p>If you have a more formal enquiry, please don't hesitate to contact us via <a href="mailto:contact@vulturesmp.com?subject=Enquiry%20from%20website" class="bodyLink">email</a>. (contact@vulturesmp.com)</p>
 			</div>
 			
-			<div id="adSpace">
-				<div id="adSpaceDisplay" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
-					<div id="arrowTop" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
-					<div id="arrowBottom" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+			<div id="bannerSpace">
+				<div id="bannerSpaceDisplay" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
+					<div id="arrowTop" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+					<div id="arrowBottom" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
 				</div>
 				
-				<div id="adContent">
+				<div id="bannerContent">
 				</div>
-				<div id="adLinkWrapper">
-					<a id="adLink" href="#">> More</a>
+				<div id="bannerLinkWrapper">
+					<a id="bannerLink" href="#">> More</a>
 				</div>
 			</div>
 			<footer id="pageFooter">
