v2 full test version 1

--- a/v2/members.html
+++ b/v2/members.html
@@ -14,15 +14,15 @@
 			
 		<link type="text/css" rel="stylesheet" href="css/header.css">
 		<link type="text/css" rel="stylesheet" href="css/body.css">
-		<link type="text/css" rel="stylesheet" href="css/adspace.css">
-		<link type="text/css" rel="stylesheet" href="css/ads.css">
+		<link type="text/css" rel="stylesheet" href="css/bannerspace.css">
+		<link type="text/css" rel="stylesheet" href="css/banners.css">
 		<link type="text/css" rel="stylesheet" href="css/footer.css">
 		<link type="text/css" rel="stylesheet" href="css/members.css">
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/primary.js"></script>
-		<script src="js/adspace.js"></script>
-		<script src="js/ads.js" defer></script>
+		<script src="js/bannerspace.js"></script>
+		<script src="js/banners.js" defer></script>
 		<script src="js/playerinfo.js" defer></script>
 		<script>
 		var pageID = "members";
@@ -165,16 +165,16 @@
 				</span>
 			</div>
 			
-			<div id="adSpace">
-				<div id="adSpaceDisplay" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
-					<div id="arrowTop" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
-					<div id="arrowBottom" onclick="expandAd()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+			<div id="bannerSpace">
+				<div id="bannerSpaceDisplay" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()">
+					<div id="arrowTop" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
+					<div id="arrowBottom" onclick="expandBanner()" onmouseover="arrowHover()" onmouseout="arrowHoverOut()"></div>
 				</div>
 				
-				<div id="adContent">
+				<div id="bannerContent">
 				</div>
-				<div id="adLinkWrapper">
-					<a id="adLink" href="#">> More</a>
+				<div id="bannerLinkWrapper">
+					<a id="bannerLink" href="#">> More</a>
 				</div>
 			</div>
 			<footer id="pageFooter">
