Applications update & improvements
-Fixed page that says apps are open
-Added an application history page
-Improved responsiveness of members redirect

--- a/develop/members/index.html
+++ b/develop/members/index.html
@@ -8,9 +8,13 @@
 			
 		<title>Redirecting...</title>
 		<link type="image/png" rel="icon" href="">
+		
+		<script>
+		window.onload = window.location.replace("../members.html");
+		</script>
 	</head>
 
-	<body onload="window.location.replace('../members.html')">
+	<body>
 		<p>Redirecting you now. If you are not redirected soon, please check if JavaScript is enabled in your browser. If you are still not redirected, <a href="../members.html">click here</a>.</p>
 	</body>
 </html>
