Updated about page
Changed to new playlist

--- a/develop/about.html
+++ b/develop/about.html
@@ -48,11 +48,11 @@
 
 				<div class="divider"></div>
 
-				<span class="center"><p>Currently, our community consists of <span class="playerCount">Loading...</span> members. However, sometimes we run applications to join the server. The best way to keep track of this is to follow <a href="http://twitter.com/VultureSMP" class="bodyLink">@VultureSMP</a> on Twitter.</p></span>
+				<span class="center"><p>Currently, our community consists of <span class="playerCount">Loading...</span> members. However, sometimes we run <a href="apply.html" class="bodyLink">applications</a> to join the server. The best way to keep track of this is to follow <a href="http://twitter.com/VultureSMP" class="bodyLink">@VultureSMP</a> on Twitter.</p></span>
 
 				<div class="divider"></div>
 
-				<span class="center"><p>VultureSMP was founded by <a class="benName benLink bodyLink">Loading...</a> on October 28, 2014, it is still going strong, with an amazing community.</p></span>
+				<span class="center"><p>VultureSMP was founded by <a class="benName benLink bodyLink">Loading...</a> on October 28, 2014, and it is still going strong, with an amazing community.</p></span>
 
 				<div class="divider"></div>
 
@@ -61,10 +61,10 @@
 				<div class="divider"></div>
 
 				<span class="center">
-					<p>We also have a number of members hosting let's plays on their personal YouTube channels, so for some action from the server, be sure to check out the official <a class="bodyLink" href="https://www.youtube.com/playlist?list=PLW7QbvSueDNLNWMOxHOVMzASqCcziULVh">playlist</a> of all videos!</p>
+					<p>We also have a number of members hosting let's plays on their personal YouTube channels, so for some action from the server, be sure to check out the official <a class="bodyLink" href="https://www.youtube.com/playlist?list=PLW7QbvSueDNJWvFxmUV0GrTnodAWtWB5M" target="_blank">playlist</a> of all videos!</p>
 				</span>
 				<div class="video">
-					<iframe src="https://www.youtube.com/embed/videoseries?list=PLW7QbvSueDNLNWMOxHOVMzASqCcziULVh" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/videoseries?list=PLW7QbvSueDNJWvFxmUV0GrTnodAWtWB5M" frameborder="0" allowfullscreen></iframe>
 				</div>
 
 				<div class="divider"></div>
