Updated download page for season downloads
Changed text on page to say we will release a download every season
instead of every month. Added download for season 1.

--- a/develop/download.html
+++ b/develop/download.html
@@ -40,7 +40,7 @@
 				<h2 id="h2">Downloads</h2>
 				<span class="center"><div class="divider" id="h2Divider"></div></span>
 				<span class="center">
-					<p>On the 1st of each month, we will release a world download of VultureSMP! This includes everyone's builds, their hidden stashes and more! So what are you waiting for, start that download!</p>
+					<p>Below are the world downloads from every season we have had on the official VultureSMP Server! This includes everyone's builds, their hidden stashes and more! So what are you waiting for, start that download!</p>
 					<p>If you are unsure of how to install the world for your own playing experience, take a look at the <a class="bodyLink" href="#guide">guide</a> at the bottom of the page.</p>
 				</span>
 
@@ -51,25 +51,7 @@
 
 				<span class="center">
 					<p>
-                        Latest Download:<br><a class="bodyLink" href="https://drive.google.com/uc?export=download&id=0B3DjtLYHCdI5LUw0WTFldzBiS0U">March, 2016</a> (432 MB)
-					</p>
-
-					<p>
-						Previous Downloads:
-                        <br>2016:
-                        <br><a class="bodyLink" href="https://drive.google.com/uc?export=download&id=0B3DjtLYHCdI5TzdEblF6ZDM4dmM">February, 2016</a> (428 MB)
-                        <br><a class="bodyLink" href="https://drive.google.com/uc?export=download&id=0B3DjtLYHCdI5eHVjSzBzWFFtclE">January, 2016</a> (427 MB)
-                        <br>
-                        <br>2015:
-                        <br><a class="bodyLink" href="https://drive.google.com/uc?export=download&id=0B3DjtLYHCdI5SUV4REJTdmZfRzA">December, 2015</a> (427 MB)
-						<br><a class="bodyLink" href="https://drive.google.com/uc?export=download&id=0B3DjtLYHCdI5MW1xV3o4WGtSUms">November, 2015</a> (426 MB)
-						<br><a class="bodyLink" href="https://www.dropbox.com/s/0efi8y2gw7z7r8d/1stOCTOBER2015download_VSMP.zip?dl=1">October, 2015</a> (405 MB)
-						<br><a class="bodyLink" href="https://www.dropbox.com/s/7apweth20n0zxw5/31stAUGUST2015download__VSMP.zip?dl=1">September, 2015</a> (356 MB)
-						<br><a class="bodyLink" href="https://www.dropbox.com/s/yeorlc4fj3z965u/1stAUGUST2015download_VSMP.zip?dl=1">August, 2015</a> (338 MB)
-						<br><a class="bodyLink" href="https://www.dropbox.com/s/8fvqsngcsud0vp1/30thJUNE2015download__VSMP.zip?dl=1">July, 2015</a> (264 MB)
-						<br><a class="bodyLink" href="https://www.dropbox.com/s/ohcfhh04goqy0lc/31stMay2015download__VSMP.zip?dl=1">June, 2015</a> (251MB)
-						<br><a class="bodyLink" href="https://www.dropbox.com/s/6ee2ivs4jvb6mba/30thAPRIL2015download__VSMP.zip?dl=1">May, 2015</a> (228 MB)
-						<br><a class="bodyLink" href="https://www.dropbox.com/s/bvvm1d55f6glf12/VSMPworld_download.zip?dl=1">April, 2015</a> (214 MB)
+						<br>Season 1: https://www.dropbox.com/s/hn3ixxvytpx1z5z/VultureSMP-S1.zip?dl=1
 					</p>
 				</span>
 
