Fixed HTML issue of earlier commit
Made the link clickable :)

--- a/develop/download.html
+++ b/develop/download.html
@@ -51,7 +51,7 @@
 
 				<span class="center">
 					<p>
-						<br>Season 1: https://www.dropbox.com/s/hn3ixxvytpx1z5z/VultureSMP-S1.zip?dl=1
+						<br>Season 1: <a class="bodyLink" href="https://www.dropbox.com/s/hn3ixxvytpx1z5z/VultureSMP-S1.zip?dl=1">Download</a> (432 MB)
 					</p>
 				</span>
 
