Jamea Twitter embed
Jamea's member page now has a twitter embed from his personal profile
rather than group list.

--- a/develop/members/_Jamea_.html
+++ b/develop/members/_Jamea_.html
@@ -55,7 +55,7 @@
 				<div class="divider"></div>
 
 				<span class="center">
-					<a class="twitter-timeline" href="https://twitter.com/VultureSMP/lists/vulturesmpers" data-widget-id="576367046306308096" width="500px" height="500px" data-chrome="noborders">Tweets from https://twitter.com/VultureSMP/lists/vulturesmpers</a>
+					<a class="twitter-timeline" href="https://twitter.com/james_jackson99" data-widget-id="713575408554344448" width="500px" height="500px" data-chrome="noborders">Tweets by @james_jackson99</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				</span>
 			</div>
