Weebee page update

--- a/develop/members/Weebee3241.html
+++ b/develop/members/Weebee3241.html
@@ -50,7 +50,8 @@
 
 				<div class="divider"></div>
 
-				<p><span class="weebeeName">Loading...</span> joined VultureSMP after being invited by <a class="benName benLink bodyLink">Loading...</a> on December 1st, 2014.</p>
+				<p><strong><span class="weebeeName">Loading...</span> is a former member of the server.</strong><br>
+				She joined VultureSMP after being invited by <a class="benName benLink bodyLink">Loading...</a> on December 1st, 2014.</p>
 
 				<div class="divider"></div>
 
