--- a/develop/index.html
+++ b/develop/index.html
@@ -63,7 +63,7 @@
 				<div class="divider"></div>
 				
 				<span class="center">
-					<p>Want more VultureSMP videos? Here is the <a class="bodyLink" href="https://www.youtube.com/playlist?list=PLW7QbvSueDNLNWMOxHOVMzASqCcziULVh" target="_blank">playlist</a> form the entire first season of the server.
+					<p>Want more VultureSMP videos? Here is the <a class="bodyLink" href="https://www.youtube.com/playlist?list=PLW7QbvSueDNLNWMOxHOVMzASqCcziULVh" target="_blank">playlist</a> from the entire first season of the server.
 				</span>
 				<div class="video">
 					<iframe src="https://www.youtube.com/embed/videoseries?list=PLW7QbvSueDNLNWMOxHOVMzASqCcziULVh" frameborder="0" allowfullscreen></iframe>
